--- a/color-wheel.html
+++ b/color-wheel.html
@@ -9,21 +9,23 @@
 <body>
   <script type="text/processing" data-processing-target="canvas">
 
-void setup()
-{
-  size(200,200);
+void setup() {
+  size(200, 200);
   background(255);
+  smooth();
+  noStroke();
+}
 
-  noFill();
-  stroke(128);
-  rect(20, 20, 40, 40);
-
-  stroke(0);
-  pushMatrix();
-  translate(-20, -20);
-  scale(2.0);
-  rect(20, 20, 40, 40);
-  popMatrix();
+void draw(){
+  if (frameCount % 10 == 0) {
+    fill(frameCount * 3 % 255, frameCount * 5 % 255,
+      frameCount * 7 % 255);
+    pushMatrix();
+    translate(100, 100);
+    rotate(radians(frameCount * 2  % 360));
+    rect(0, 0, 80, 20);
+    popMatrix();
+  }
 }
 
   </script>
