--- a/droplets.html
+++ b/droplets.html
@@ -9,21 +9,20 @@
 <body>
   <script type="text/processing" data-processing-target="canvas">
 
-void setup()
-{
-  size(200,200);
+void setup() {
+  size(window.innerWidth, window.innerHeight);
   background(255);
+  frameRate(200);
+}
 
-  noFill();
-  stroke(128);
-  rect(20, 20, 40, 40);
-
+void draw(){
   stroke(0);
-  pushMatrix();
-  translate(-20, -20);
-  scale(2.0);
-  rect(20, 20, 40, 40);
-  popMatrix();
+  translate(width/2, height/2);
+  for(int i = 0; i <= width + 400; i += 50) {
+    if (frameCount % i == 0) {
+      ellipse(0, 0, i % width, i % width);
+    }
+  }
 }
 
   </script>
