--- a/blueprints-3d.html
+++ b/blueprints-3d.html
@@ -9,29 +9,39 @@
   <script src="./lib/processing-1.4.1.js"></script>
   <script type="text/processing" data-processing-target="canvas">
 
-    float x, y, z;
+    float z;
+    int r;
+    int g;
 
     void setup() {
       size(window.innerWidth,window.innerHeight, P3D);
-      x = 0;
-      y = 0;
       z = 0;
+      g = 0;
       smooth();
       background(#2F4F4F);
-      frameRate(60);
+      frameRate(32);
     }
 
     void draw(){
+      translate(0, 0, z);
       fill(128);
       noFill();
-      stroke(random(126, 255), 0, 0, random(64, 192));
+      stroke(r, g, 0, random(62, 192));
+      strokeWeight(random(1, 10));
       bezier(
-        width / 2, height - 200, z,
-        width * sin(frameCount) / 100, height / 3, 0,
-        width * sin(frameCount), height / 3, 0,
-        width / 2, 200, z
+        width / 2, height / 2, z,
+        random(-1, 1) * (width),  height, 0,
+        (width / 2) + random(1, 500), height / 3, 0,
+        width / 2, height / 2, z
       );
-      z *= sin(frameCount) * 100;
+      z++;
+      if (z > 500) {
+        z = 0;
+        g = random(64, 126);
+        r = 0;
+      } else {
+        r = random(126, 255);
+      }
     }
 
   </script>
