add new pretty pictures, including droplets

--- a/arcs2.html
+++ b/arcs2.html
@@ -9,24 +9,22 @@
   <script src="./lib/processing-1.4.1.js"></script>
   <script type="text/processing" data-processing-target="canvas">
 
-int z;
-int i = 0;
 void setup() {
   size(window.innerWidth, window.innerHeight, P3D);
-  frameRate(12);
-  lights();
+  noStroke();
+  smooth();
+  background(0);
 }
 
 void draw() {
-  background(0);
-  translate(width/2, height/2, z);
-  rotateX(PI / 8);
-  rotateZ(PI / 8);
-  rotateY(PI / (i % 8 + 1));
-  stroke(255);
-  fill(128);
-  box(200);
-  i++;
+  float radius = 1.0;
+  for (int deg = 0; deg < 360 * 35; deg += 11) {
+    float angle = radians(deg);
+    float x = width / 2 + (cos(angle) * radius);
+    float y = height / 2 + (sin(angle) * radius);
+    ellipse(x, y, 6, 6);
+    radius += 0.34;
+  }
 }
 
   </script>
