--- a/sin-pattern.html
+++ b/sin-pattern.html
@@ -9,28 +9,30 @@
   <script src="./lib/processing-1.4.1.js"></script>
   <script type="text/processing" data-processing-target="canvas">
 
-int z;
-int i = 0;
 void setup() {
   size(window.innerWidth, window.innerHeight, P3D);
-  frameRate(12);
-  lights();
+  smooth();
+  fill(255, 20);
 }
 
 void draw() {
-  background(0);
-  translate(width/2, height/2, z);
-  rotateX(PI / 8);
-  rotateZ(PI / 8);
-  rotateY(PI / (i % 8 + 1));
-  stroke(255);
-  fill(128);
-  box(200);
-  i++;
+  float scaleVal = 18.0;
+  float angleInc = PI / 28.0;
+  float angle = 0.0;
+  for (int offset = -10; offset < width - 10; offset += 5) {
+    for (int y = 0; y <= height; y += 2) {
+      float x = offset + (sin(angle) * scaleVal);
+      noStroke();
+      ellipse(x, y, 10, 10);
+      stroke(0);
+      point(x, y);
+      angle += angleInc;
+    }
+    angle += PI;
+  }
 }
 
   </script>
   <canvas id="canvas"></canvas>
 </body>
 </html>
-
